sticky header working

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="scrollable-table">
-        <table class="table table-striped table-header-rotated">
+        <table class="table table-striped table-header-rotated fixed_headers">
           <thead>
             <tr>
               <!-- First column header is not rotated -->
