--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <script src="modernizr-2.8.3.js"></script>
 </head>
 <body>
+
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor autem aut aperiam eum ipsam, quae sit beatae cupiditate accusantium sint reprehenderit tenetur ut sunt possimus.</p>
+
     <div class="scrollable-table">
-        <table class="table table-striped table-header-rotated fixed_headers">
+        <table class="table table-header-rotated fixed_headers">
           <thead>
             <tr>
               <!-- First column header is not rotated -->
@@ -380,44 +383,49 @@
 <br/>
 <br/>
 
-<table id="cartTable" class="table">
-  <thead>
-      <tr>
-          <th class="text-left">Item</th>
-          <th class="text-right">Quantity</th>
-          <th class="text-right">Price</th>
-          <th class="text-right">Subtotal</th>
-      </tr>
-  </thead>
-  <tbody>
+
+<div class="scrollable-table">
+    <table id="cartTable" class="table table-header-rotated fixed_headers">
+      <thead>
+        <tr>
+          <th class="rotate-45"><div><span>Item</span></div></th>
+          <th class="rotate-45"><div><span>Quantity</span></div></th>
+          <th class="rotate-45"><div><span>Price</span></div></th>
+          <th class="rotate-45"><div><span>Subtotal</span></div></th>
+          <!-- Last column header is not rotated -->
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
       <!-- @foreach (var line in Model.Cart.Lines){ -->
-      <tr>
-          <td class="text-left">Product.Name</td>
-          <td class="text-right">3</td>
-          <td class="text-right">500</td>
-          <td class="text-right">1500
-              <!-- @((line.Quantity * line.Product.Price).ToString("c0")) -->
-          </td>
-          <td>
-              <!-- @using (Html.BeginForm("RemoveFromCart", "Cart")){ -->
-                  <!-- @Html.Hidden("ProductId", line.Product.ProductID) -->
-                  <!-- @Html.HiddenFor(x => x.ReturnUrl) -->
-                  <input class="btn btn-sm btn-warning"
-                         type="submit" value="Remove" />
-              <!-- } -->
-          </td>
-      </tr>
-      <!-- } -->
-  </tbody>
-  <tfoot>
-      <tr>
-          <td colspan="3" class="text-right">Total:</td>
-          <td class="text-right">2599
-              <!-- @Model.Cart.ComputeTotalValue().ToString("c0") -->
-          </td>
-      </tr>
-  </tfoot>
-</table>
+        <tr>
+            <td class="text-left">Product.Name</td>
+            <td class="text-right">3</td>
+            <td class="text-right">500</td>
+            <td class="text-right">1500
+                <!-- @((line.Quantity * line.Product.Price).ToString("c0")) -->
+            </td>
+            <td>
+                <!-- @using (Html.BeginForm("RemoveFromCart", "Cart")){ -->
+                    <!-- @Html.Hidden("ProductId", line.Product.ProductID) -->
+                    <!-- @Html.HiddenFor(x => x.ReturnUrl) -->
+                    <input class="btn btn-sm btn-warning"
+                          type="submit" value="Remove" />
+                <!-- } -->
+            </td>
+        </tr>
+        <!-- } -->
+      </tbody>
+      <tfoot>
+          <tr>
+              <td colspan="3" class="text-right">Total:</td>
+              <td class="text-right">2599
+                  <!-- @Model.Cart.ComputeTotalValue().ToString("c0") -->
+              </td>
+          </tr>
+      </tfoot>
+    </table>
+  </div>
 
 <br>
 <br>
