--- a/index.html
+++ b/index.html
@@ -10,17 +10,10 @@
     <script src="modernizr-2.8.3.js"></script>
 </head>
 <body>
-
     <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor autem aut aperiam eum ipsam, quae sit beatae cupiditate accusantium sint reprehenderit tenetur ut sunt possimus.</p>
-
-<br>
-<br>
-<br>
-<label for="" class="divider">my rotated table</label>
-<br/>
-<br/>
-<br/>
-
+  <br>
+  <label for="" class="divider">my rotated table</label>
+  <br/>
 
 <div class="scrollable-table">
     <table id="cartTable" class="table table-header-rotated fixed_headers">
@@ -54,7 +47,7 @@
             </td>
         </tr>
         <tr>
-            <td class="text-left itemtd">Caviar (Vegan)</td>
+            <td class="text-left itemtd">Caviar X</td>
             <td class="text-right pricetd">500</td>
             <td class="text-right qntytd">3</td>
             <td class="text-right subtottd">8500
@@ -197,15 +190,17 @@
                 <!-- } -->
             </td>
         </tr>
-
         <!-- } -->
       </tbody>
       <tfoot>
-          <tr>
-              <td colspan="3" class="text-right">Total:</td>
-              <td class="text-right">2599
+          <tr class="tablefoot">
+              <td class="text-left itemtd">Total:</td>
+              <td class="text-right pricetd"></td>
+              <td class="text-right qntytd"></td>
+              <td class="text-right subtottd">2599
                   <!-- @Model.Cart.ComputeTotalValue().ToString("c0") -->
               </td>
+              <td></td>
           </tr>
       </tfoot>
     </table>
