added switch between horiz and rotated headers

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <label for="" class="divider">cart  rotated table</label>
   <br/>
 
-<div class="scrollable-table">
-    <table id="cartTable" class="table table-header-rotated fixed_headers">
+<div class="scrollable-table-todo-remove">
+    <!-- <table id="cartTable" class="table table-header-horiz fixed_headers"> -->
+        <table id="cartTable" class="table table-header-rotated fixed_headers">
       <thead>
         <tr>
           <!-- First column header is not rotated -->
