jump pont updated. results page table has new class names..
..reflected in the css file.

--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
         <thead>
           <tr>
             <!-- First column header is not rotated -->
-            <th class="itemth"><div><span>Item</span></div></th>
-            <th class="rotate-45 priceth"><div><span><br>Price (£)</span></div></th>
-            <th class="rotate-45 qntyth"><div><span>Quantity</span></div></th>
-            <th class="rotate-45 subtotth"><div><span><br>Subtotal (£)</span></div></th>
+            <th class="res-itemth"><div><span>Item</span></div></th>
+            <th class="rotate-45 res-priceth"><div><span><br>Price (£)</span></div></th>
+            <th class="rotate-45 res-qntyth"><div><span>Quantity</span></div></th>
+            <th class="rotate-45 res-subtotth"><div><span><br>Subtotal (£)</span></div></th>
             <!-- Last column header is not rotated -->
             <th></th>
           </tr>
@@ -229,10 +229,10 @@
         <tbody>
         <!-- @foreach (var line in Model.Cart.Lines){ -->
           <tr>
-              <td class="text-left itemtd">Caviar (Vegan)</td>
-              <td class="text-right pricetd">500</td>
-              <td class="text-right qntytd">3</td>
-              <td class="text-right subtottd">8500
+              <td class="text-left res-itemtd">Caviar (Vegan)</td>
+              <td class="text-right res-pricetd">500</td>
+              <td class="text-right res-qntytd">3</td>
+              <td class="text-right res-subtottd">8500
                   <!-- @((line.Quantity * line.Product.Price).ToString("c0")) -->
               </td>
               <td>
@@ -245,10 +245,10 @@
               </td>
           </tr>
           <tr>
-              <td class="text-left itemtd">Caviar X</td>
-              <td class="text-right pricetd">500</td>
-              <td class="text-right qntytd">3</td>
-              <td class="text-right subtottd">8500
+              <td class="text-left res-itemtd">Caviar X</td>
+              <td class="text-right res-pricetd">500</td>
+              <td class="text-right res-qntytd">3</td>
+              <td class="text-right res-subtottd">8500
                   <!-- @((line.Quantity * line.Product.Price).ToString("c0")) -->
               </td>
               <td>
@@ -261,10 +261,10 @@
               </td>
           </tr>
           <tr>
-              <td class="text-left itemtd">Caviar (Vegan)</td>
-              <td class="text-right pricetd">500</td>
-              <td class="text-right qntytd">3</td>
-              <td class="text-right subtottd">8500
+              <td class="text-left res-itemtd">Caviar (Vegan)</td>
+              <td class="text-right res-pricetd">500</td>
+              <td class="text-right res-qntytd">3</td>
+              <td class="text-right res-subtottd">8500
                   <!-- @((line.Quantity * line.Product.Price).ToString("c0")) -->
               </td>
               <td>
@@ -277,10 +277,10 @@
               </td>
           </tr>
           <tr>
-              <td class="text-left itemtd">Caviar (Vegan)</td>
-              <td class="text-right pricetd">500</td>
-              <td class="text-right qntytd">3</td>
-              <td class="text-right subtottd">8500
+              <td class="text-left res-itemtd">Caviar (Vegan)</td>
+              <td class="text-right res-pricetd">500</td>
+              <td class="text-right res-qntytd">3</td>
+              <td class="text-right res-subtottd">8500
                   <!-- @((line.Quantity * line.Product.Price).ToString("c0")) -->
               </td>
               <td>
@@ -293,10 +293,10 @@
               </td>
           </tr>
           <tr>
-              <td class="text-left itemtd">Caviar (Vegan)</td>
-              <td class="text-right pricetd">500</td>
-              <td class="text-right qntytd">3</td>
-              <td class="text-right subtottd">8500
+              <td class="text-left res-itemtd">Caviar (Vegan)</td>
+              <td class="text-right res-pricetd">500</td>
+              <td class="text-right res-qntytd">3</td>
+              <td class="text-right res-subtottd">8500
                   <!-- @((line.Quantity * line.Product.Price).ToString("c0")) -->
               </td>
               <td>
@@ -309,10 +309,10 @@
               </td>
           </tr>
           <tr>
-              <td class="text-left itemtd">Caviar (Vegan)</td>
-              <td class="text-right pricetd">500</td>
-              <td class="text-right qntytd">3</td>
-              <td class="text-right subtottd">8500
+              <td class="text-left res-itemtd">Caviar (Vegan)</td>
+              <td class="text-right res-pricetd">500</td>
+              <td class="text-right res-qntytd">3</td>
+              <td class="text-right res-subtottd">8500
                   <!-- @((line.Quantity * line.Product.Price).ToString("c0")) -->
               </td>
               <td>
@@ -325,10 +325,10 @@
               </td>
           </tr>
           <tr>
-              <td class="text-left itemtd">Caviar (Vegan)</td>
-              <td class="text-right pricetd">500</td>
-              <td class="text-right qntytd">3</td>
-              <td class="text-right subtottd">8500
+              <td class="text-left res-itemtd">Caviar (Vegan)</td>
+              <td class="text-right res-pricetd">500</td>
+              <td class="text-right res-qntytd">3</td>
+              <td class="text-right res-subtottd">8500
                   <!-- @((line.Quantity * line.Product.Price).ToString("c0")) -->
               </td>
               <td>
@@ -341,10 +341,10 @@
               </td>
           </tr>
           <tr>
-              <td class="text-left itemtd">Caviar (Vegan)</td>
-              <td class="text-right pricetd">500</td>
-              <td class="text-right qntytd">3</td>
-              <td class="text-right subtottd">8500
+              <td class="text-left res-itemtd">Caviar (Vegan)</td>
+              <td class="text-right res-pricetd">500</td>
+              <td class="text-right res-qntytd">3</td>
+              <td class="text-right res-subtottd">8500
                   <!-- @((line.Quantity * line.Product.Price).ToString("c0")) -->
               </td>
               <td>
@@ -357,10 +357,10 @@
               </td>
           </tr>
           <tr>
-              <td class="text-left itemtd">Caviar (Vegan)</td>
-              <td class="text-right pricetd">500</td>
-              <td class="text-right qntytd">3</td>
-              <td class="text-right subtottd">8500
+              <td class="text-left res-itemtd">Caviar (Vegan)</td>
+              <td class="text-right res-pricetd">500</td>
+              <td class="text-right res-qntytd">3</td>
+              <td class="text-right res-subtottd">8500
                   <!-- @((line.Quantity * line.Product.Price).ToString("c0")) -->
               </td>
               <td>
@@ -373,10 +373,10 @@
               </td>
           </tr>
           <tr>
-              <td class="text-left itemtd">Caviar (Vegan)</td>
-              <td class="text-right pricetd">500</td>
-              <td class="text-right qntytd">3</td>
-              <td class="text-right subtottd">8500
+              <td class="text-left res-itemtd">Caviar (Vegan)</td>
+              <td class="text-right res-pricetd">500</td>
+              <td class="text-right res-qntytd">3</td>
+              <td class="text-right res-subtottd">8500
                   <!-- @((line.Quantity * line.Product.Price).ToString("c0")) -->
               </td>
               <td>
@@ -392,10 +392,10 @@
         </tbody>
         <tfoot>
             <tr class="tablefoot">
-                <td class="text-left itemtd">Total:</td>
-                <td class="text-right pricetd"></td>
-                <td class="text-right qntytd"></td>
-                <td class="text-right subtottd">2599
+                <td class="text-left res-itemtd">Total:</td>
+                <td class="text-right res-pricetd"></td>
+                <td class="text-right res-res-qntytd"></td>
+                <td class="text-right res-subtottd">2599
                     <!-- @Model.Cart.ComputeTotalValue().ToString("c0") -->
                 </td>
                 <td></td>
@@ -451,7 +451,8 @@
   </tfoot>
 </table>
 <script>
-$(window).on('resize', function() {
+  
+function SetTableClassFn( jQuery ) {
   if($(window).width() < 1921) {
     // if($(window).width() < 768) {
         $('#cartTable').addClass('table-header-rotated');
@@ -460,7 +461,21 @@ $(window).on('resize', function() {
         $('#cartTable').addClass('table-header-horiz');
         $('#cartTable').removeClass('table-header-rotated');
     }
-})
+}
+
+$( window ).on( "load", SetTableClassFn );    //same as calling this:- $( document ).ready( SetTableClassFn );
+$( window ).on( "resize", SetTableClassFn );
+
+// $(window).on('resize', function() {
+//   if($(window).width() < 1921) {
+//     // if($(window).width() < 768) {
+//         $('#cartTable').addClass('table-header-rotated');
+//         $('#cartTable').removeClass('table-header-horiz');
+//     }else{
+//         $('#cartTable').addClass('table-header-horiz');
+//         $('#cartTable').removeClass('table-header-rotated');
+//     }
+// })
 
 
 </script>
