cart table done

--- a/index.html
+++ b/index.html
@@ -451,8 +451,8 @@
   </tfoot>
 </table>
 <script>
-  
-function SetTableClassFn( jQuery ) {
+
+function SetTableClassFn() {
   if($(window).width() < 1921) {
     // if($(window).width() < 768) {
         $('#cartTable').addClass('table-header-rotated');
